# chatbot-lab

./: .flake8  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
data/: __init__.py
data/processed/: __init__.py
src/: __init__.py
src/api/: __init__.py
src/api/v1/: __init__.py  urls.py  view.py
tests/: __init__.py  test_chat_bot.py
